--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: guestbook-ui
+  namespace: app-2
 spec:
   replicas: 2
   revisionHistoryLimit: 3
